test-package-compiler/tests/snapshots/compiler_tests__self_send_open_class_side_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("Object"), span: Span { start: 169, end: 175 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// BT-3666: open-class class-side self foo is late-bound (class_self_send) and rebinds ClassVars."), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 176, end: 185 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("OpenSelfSendClassSide"), span: Span { start: 186, end: 207 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Keyword("classState:"), span: Span { start: 210, end: 221 }, leading_trivia: [Whitespace("\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("hits"), span: Span { start: 222, end: 226 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("="), span: Span { start: 227, end: 228 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 229, end: 230 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("class"), span: Span { start: 234, end: 239 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("foo"), span: Span { start: 240, end: 243 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 244, end: 246 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("1"), span: Span { start: 247, end: 248 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("class"), span: Span { start: 252, end: 257 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("bar"), span: Span { start: 258, end: 261 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 262, end: 264 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("self"), span: Span { start: 265, end: 269 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("foo"), span: Span { start: 270, end: 273 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 274, end: 274 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
