test-package-compiler/tests/snapshots/compiler_tests__self_send_sealed_class_codegen.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: core_erlang
---
module 'self_send_sealed_class' ['new'/0, 'new'/1, 'dispatch'/3, 'dispatch'/4, 'has_method'/1, 'superclass'/0, 'register_class'/0, '__beamtalk_meta'/0, 'class_foo'/1, 'class_bar'/1]
  attributes ['on_load' = [{'register_class', 0}],
     'beamtalk_class' = [{'SealedSelfSendClass', 'Object'}],
     'spec' =
        [{{'class_foo', 1}, [{'type', 0, 'fun', [{'type', 0, 'product', [{'type', 0, 'any', []}]}, {'type', 0, 'integer', []}]}]}],
     'spec' =
        [{{'class_bar', 1}, [{'type', 0, 'fun', [{'type', 0, 'product', [{'type', 0, 'any', []}]}, {'type', 0, 'integer', []}]}]}]]

'new'/0 = fun () ->
    ~{'$beamtalk_class' => 'SealedSelfSendClass'}~


'new'/1 = fun (InitArgs) ->
    let DefaultState = call 'self_send_sealed_class':'new'() in
    call 'maps':'merge'(DefaultState, InitArgs)


'dispatch'/3 = fun (Selector, Args, Self) ->
    case Selector of
        <'class'> when 'true' ->
            'SealedSelfSendClass'
        <'respondsTo:'> when 'true' ->
            case Args of
                <[RtSelector | _]> when 'true' -> call 'self_send_sealed_class':'has_method'(RtSelector)
                <_> when 'true' -> 'false'
            end
        <'perform:'> when 'true' ->
            let <PerfSel> = call 'erlang':'hd'(Args) in
            call 'self_send_sealed_class':'dispatch'(PerfSel, [], Self)
        <'perform:withArguments:'> when 'true' ->
            let <PwaSel> = call 'erlang':'hd'(Args) in
            let <PwaArgs> = call 'erlang':'hd'(call 'erlang':'tl'(Args)) in
            call 'self_send_sealed_class':'dispatch'(PwaSel, PwaArgs, Self)
        <_Other> when 'true' ->
            case call 'beamtalk_extensions':'lookup'('SealedSelfSendClass', Selector) of
                <{'ok', ExtFun, _ExtOwner}> when 'true' ->
                    apply ExtFun(Args, Self)
                <'not_found'> when 'true' ->
                    call 'bt@stdlib@object':'dispatch'(Selector, Args, Self)
            end
    end


'dispatch'/4 = fun (Selector, Args, Self, State) ->
    try call 'self_send_sealed_class':'dispatch'(Selector, Args, Self)
    of <D4Result> -> {'reply', D4Result, State}
    catch <_D4Type, D4Error, _D4Stack> -> {'error', D4Error, State}


'has_method'/1 = fun (Selector) ->
    case call 'lists':'member'(Selector, ['class', 'respondsTo:', 'perform:', 'perform:withArguments:']) of
        <'true'> when 'true' -> 'true'
        <'false'> when 'true' ->
            case call 'beamtalk_extensions':'has'('SealedSelfSendClass', Selector) of
                <'true'> when 'true' -> 'true'
                <'false'> when 'true' -> call 'bt@stdlib@object':'has_method'(Selector)
            end
    end


'superclass'/0 = fun () -> 'Object'


'class_foo'/1 = fun (ClassSelf) ->
    1

'class_bar'/1 = fun (ClassSelf) ->
    let _Effect1 = call 'self_send_sealed_class':'class_foo'(ClassSelf) in _Effect1

'register_class'/0 = fun () ->
    try
        let _BuilderState0 = ~{
            'className' => 'SealedSelfSendClass',
            'superclassRef' => 'Object',
            'moduleName' => 'self_send_sealed_class',
            'methodSource' => ~{}~,
            'classMethodSource' => ~{'foo' => #{#<99>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<61>(8,1,'integer',['unsigned'|['big']]),#<62>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<49>(8,1,'integer',['unsigned'|['big']])}#, 'bar' => #{#<99>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<98>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<61>(8,1,'integer',['unsigned'|['big']]),#<62>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']])}#}~,
            'methodSignatures' => ~{}~,
            'classMethodSignatures' => ~{'foo' => #{#<102>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<45>(8,1,'integer',['unsigned'|['big']]),#<62>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<73>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']])}#, 'bar' => #{#<98>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<45>(8,1,'integer',['unsigned'|['big']]),#<62>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<73>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']])}#}~,
            'methodXref' => [~{'class_side' => 'true', 'selector' => 'foo', 'line' => 1, 'sends' => [], 'references' => [~{'class' => 'Integer', 'line' => 1}~], 'source_status' => 'indexed'}~, ~{'class_side' => 'true', 'selector' => 'bar', 'line' => 1, 'sends' => [~{'selector' => 'foo', 'line' => 1, 'recv_kind' => 'self_recv', 'recv_type' => 'SealedSelfSendClass'}~], 'references' => [~{'class' => 'Integer', 'line' => 1}~], 'source_status' => 'indexed'}~],
            'stateVarXref' => [],
            'classState' => ~{}~,
            'classDoc' => 'none',
            'methodDocs' => ~{}~,
            'classMethodDocs' => ~{}~,
            'meta' => ~{'class' => 'SealedSelfSendClass',
      'superclass' => 'Object',
      'package' => 'none',
      'kind' => 'object',
      'fields' => [],
      'class_fields' => [],
      'is_sealed' => 'true',
      'is_abstract' => 'false',
      'is_value' => 'false',
      'is_typed' => 'false',
      'is_internal' => 'false',
      'visibility' => 'public',
      'type_params' => [],
      'uses' => [],
      'field_types' => ~{}~,
      'field_has_default' => ~{}~,
      'field_kinds' => ~{}~,
      'class_field_kinds' => ~{}~,
      'initialize_assigns' => [],
      'method_info' => ~{}~,
      'class_method_info' => ~{'foo' => ~{'arity' => 0, 'param_types' => [], 'return_type' => 'Integer', 'is_sealed' => 'false', 'visibility' => 'public'}~, 'bar' => ~{'arity' => 0, 'param_types' => [], 'return_type' => 'Integer', 'is_sealed' => 'false', 'visibility' => 'public'}~}~,
      'class_var_abi' => 1,
      'direct_class_methods' => ~{}~
    }~
        }~
        in let _Reg0 = case call 'beamtalk_class_builder':'register'(_BuilderState0) of
            <{'ok', _Pid0}> when 'true' -> 'ok'
            <{'error', _Err0}> when 'true' -> {'error', _Err0}
        end

        in _Reg0

    of _ClassRegResult -> _ClassRegResult
    catch <CatchType, CatchError, CatchStack> -> primop 'raw_raise'(CatchType, CatchError, CatchStack)


'__beamtalk_meta'/0 = fun () ->
    ~{'class' => 'SealedSelfSendClass',
      'superclass' => 'Object',
      'package' => 'none',
      'kind' => 'object',
      'fields' => [],
      'class_fields' => [],
      'is_sealed' => 'true',
      'is_abstract' => 'false',
      'is_value' => 'false',
      'is_typed' => 'false',
      'is_internal' => 'false',
      'visibility' => 'public',
      'type_params' => [],
      'uses' => [],
      'field_types' => ~{}~,
      'field_has_default' => ~{}~,
      'field_kinds' => ~{}~,
      'class_field_kinds' => ~{}~,
      'initialize_assigns' => [],
      'method_info' => ~{}~,
      'class_method_info' => ~{'foo' => ~{'arity' => 0, 'param_types' => [], 'return_type' => 'Integer', 'is_sealed' => 'false', 'visibility' => 'public'}~, 'bar' => ~{'arity' => 0, 'param_types' => [], 'return_type' => 'Integer', 'is_sealed' => 'false', 'visibility' => 'public'}~}~,
      'class_var_abi' => 1,
      'direct_class_methods' => ~{}~
    }~

end
