test-package-compiler/tests/snapshots/compiler_tests__self_send_sealed_class_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("sealed"), span: Span { start: 175, end: 181 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// BT-3666: sealed class self-sends stay direct calls; the pure shortcut applies (no ClassVars rebind)."), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("Object"), span: Span { start: 182, end: 188 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 189, end: 198 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("SealedSelfSendClass"), span: Span { start: 199, end: 218 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("class"), span: Span { start: 221, end: 226 }, leading_trivia: [Whitespace("\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("foo"), span: Span { start: 227, end: 230 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 231, end: 233 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("1"), span: Span { start: 234, end: 235 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("class"), span: Span { start: 239, end: 244 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("bar"), span: Span { start: 245, end: 248 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 249, end: 251 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("self"), span: Span { start: 252, end: 256 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("foo"), span: Span { start: 257, end: 260 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 261, end: 261 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
